[tool.poetry]
name = "pb_video_templater"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
fastapi = "^0.79.0"
gunicorn = "^20.1.0"
uvicorn = "^0.18.2"
python-multipart = "^0.0.5"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.40"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.1"
requests = "^2.28.1"
cryptography = "^37.0.4"
boto3 = "^1.24.47"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
mypy = "^0.971"
types-requests = "^2.28.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
